tests/rosetta/out/Go/compiler-virtual-machine-interpreter.error
parse: error[P001]: tests/rosetta/x/Mochi/compiler-virtual-machine-interpreter.mochi:135:5: unexpected token "if" (expected "{" Statement* "}" (("else" IfStmt) | ("else" "{" Statement* "}"))?)
  --> tests/rosetta/x/Mochi/compiler-virtual-machine-interpreter.mochi:135:5

135 |     if op == "add" {
    |     ^

help:
  Check for a missing `{` or `}` to close the block.